--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,15 +22,30 @@
     padding: 10% 0 15% 0 !important;     
     color: #ffffff;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
-    
-    /* 
-		background-image: url('/static/img/background/background-3.jpg') !important;
-    background-attachment: local !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-		*/
+}
 
+.own-owl-carousel {
+	text-align: center;
+}
+
+.own-description {
+	font-style: italic;
+}
+
+.own-author {
+	font-weight: 700;
+	padding-top: 10px;
+}
+
+.own-testimonial-link {
+	text-decoration: underline;
+	color: #777;
+	padding-top: 10px;
+}
+
+.own-testimonial-link:hover {
+	text-decoration: none;
+	color: #777;
 }
 
 .own-main img {
